kubernetes/apps/base/observability/exporters/nut-exporter/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.sstr.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nut-exporter
spec:
  hostnames:
    - nut-exporter.${DOMAIN}
  parentRefs:
    - name: ${GATEWAY:=envoy-internal}
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: nut-exporter
          namespace: observability
          port: 9199
